infra/manifests/frontend/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: inference
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/managed-by: gen_frontend
    app.kubernetes.io/instance: frontend
    env: staging
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: frontend
